# takopi-engine-kimi

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: publish.sh
src/takopi_engine_kimi/: __init__.py
src/takopi_kimi_runner/: __init__.py
tests/: test_kimi_runner.py
