[project]
name = "takopi-engine-kimi"
version = "0.1.0"
description = "Kimi CLI engine plugin for Takopi"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "takopi>=0.22.0",
    "msgspec>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.entry-points."takopi.engine_backends"]
kimi = "takopi_engine_kimi:BACKEND"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/takopi_engine_kimi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
