[project]
name = "takopi-engine-kimi"
version = "0.1.0"
description = "Kimi CLI engine plugin for Takopi"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [
    {name = "z80dev"},
]
keywords = ["takopi", "kimi", "cli", "agent", "coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "takopi>=0.22.0",
    "msgspec>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/z80dev/takopi-engine-kimi"
Repository = "https://github.com/z80dev/takopi-engine-kimi"
Issues = "https://github.com/z80dev/takopi-engine-kimi/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.entry-points."takopi.engine_backends"]
kimi = "takopi_engine_kimi:BACKEND"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/takopi_engine_kimi"]

[tool.hatch.version]
path = "src/takopi_engine_kimi/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
